# stellar-zk

./: .cursorrules  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  README.md  ROADMAP.md  SECURITY.md  USAGE.md  llms-full.txt  llms.txt
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml  release.yml
Formula/: stellar-zk.rb
crates/stellar-zk-cli/: Cargo.toml
crates/stellar-zk-cli/src/: main.rs  output.rs
crates/stellar-zk-cli/src/commands/: build.rs  call.rs  deploy.rs  estimate.rs  init.rs  mod.rs  prove.rs
crates/stellar-zk-core/: Cargo.toml
crates/stellar-zk-core/src/: artifacts.rs  backend.rs  config.rs  error.rs  estimator.rs  lib.rs  pipeline.rs  profile.rs  project.rs  stellar.rs  version.rs
crates/stellar-zk-core/src/templates/: embedded.rs  mod.rs  renderer.rs
crates/stellar-zk-core/templates/circuits/risc0/guest/src/: main.rs.tmpl
crates/stellar-zk-core/templates/circuits/risc0/host/: Cargo.toml.tmpl
crates/stellar-zk-core/templates/config/: input.json.tmpl
crates/stellar-zk-core/templates/contracts/risc0_verifier/: Cargo.toml.tmpl
crates/stellar-zk-groth16/: Cargo.toml
crates/stellar-zk-groth16/src/: circuit.rs  lib.rs  prover.rs  serializer.rs
crates/stellar-zk-risc0/: Cargo.toml
crates/stellar-zk-risc0/src/: guest.rs  lib.rs  prover.rs  serializer.rs
crates/stellar-zk-ultrahonk/: Cargo.toml
crates/stellar-zk-ultrahonk/src/: lib.rs  nargo.rs  proof_convert.rs  serializer.rs
docs/: troubleshooting.md  tutorial.md
scripts/: install.sh
templates/circuits/groth16/: example.circom
templates/circuits/risc0/guest/: Cargo.toml
templates/circuits/risc0/host/src/: main.rs
templates/circuits/ultrahonk/: Nargo.toml
templates/circuits/ultrahonk/src/: main.nr
templates/contracts/groth16_verifier/src/: lib.rs.tmpl
templates/contracts/risc0_verifier/src/: lib.rs.tmpl
templates/contracts/ultrahonk_verifier/src/: lib.rs.tmpl
