[package]
name = "stellar-zk"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "ZK DevKit for Stellar/Soroban — unified CLI for Groth16, UltraHonk, and RISC Zero"
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"

[[bin]]
name = "stellar-zk"
path = "src/main.rs"

[dependencies]
stellar-zk-core.workspace = true
stellar-zk-groth16.workspace = true
stellar-zk-ultrahonk.workspace = true
stellar-zk-risc0.workspace = true

clap = { version = "4.5", features = ["derive", "env", "color"] }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

console = "0.15"
indicatif = "0.17"
dialoguer = "0.11"
hex = "0.4"
sha2 = "0.10"
