[package]
name = "stellar-zk-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Core library for stellar-zk: traits, config, pipeline, templates"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
async-trait.workspace = true

handlebars = "6.0"
which = "7.0"
