[package]
name = "stellar-zk-risc0"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "RISC Zero backend for stellar-zk (zkVM + Groth16 wrapper)"
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"

[dependencies]
stellar-zk-core.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
async-trait.workspace = true
which = "7.0"
hex = "0.4"
sha2 = "0.10"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
